[package]
name = "sova-payload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-cli.workspace = true
sova-evm.workspace = true

reth.workspace = true
reth-basic-payload-builder.workspace = true
reth-errors.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-execution-types.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-node-ethereum.workspace = true
reth-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-tracing.workspace = true

alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
