[package]
name = "sova-payload"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-cli.workspace = true
sova-evm.workspace = true

reth-basic-payload-builder.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-errors.workspace = true
reth-evm.workspace = true
reth-execution-types.workspace = true
reth-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-payload-util.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-rpc-types-engine.workspace = true
reth-storage-api.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true

reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-node.workspace = true
reth-optimism-txpool.workspace = true

revm.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true

op-alloy-consensus.workspace = true

derive_more.workspace = true
eyre.workspace = true
