[package]
name = "rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-primitives.workspace = true

reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-network-api.workspace = true
reth-node-builder.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-storage-api.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-rpc-types-eth.workspace = true

parking_lot.workspace = true
