[package]
name = "sova-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-evm.workspace = true
sova-primitives.workspace = true

reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-network-api.workspace = true
reth-node-builder.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-rpc-server-types.workspace = true
reth-storage-api.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true

revm.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-network-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer.workspace = true

derive_more.workspace = true
jsonrpsee-types.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
thiserror.workspace = true
