[package]
name = "sova-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-network-api.workspace = true
reth-node-builder.workspace = true
reth-node-api.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives = { workspace = true, features = ["reth-codec", "serde-bincode-compat"] }
reth-optimism-rpc.workspace = true
reth-primitives-traits.workspace = true
reth-rpc.workspace = true
reth-rpc-eth-api.workspace = true
reth-rpc-eth-types.workspace = true
reth-storage-api.workspace = true
reth-tasks.workspace = true
reth-transaction-pool.workspace = true

revm.workspace = true

op-revm.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer.workspace = true

op-alloy-consensus.workspace = true
op-alloy-network.workspace = true
op-alloy-rpc-types-engine.workspace = true
op-alloy-rpc-types.workspace = true

async-trait.workspace = true
derive_more.workspace = true
eyre.workspace = true
jsonrpsee-types.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true