[package]
name = "sova-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
sova-chainspec.workspace = true
sova-cli.workspace = true

sova-sentinel-client.workspace = true
sova-sentinel-proto.workspace = true

reth-chainspec.workspace = true
reth-errors.workspace = true
reth-evm.workspace = true
reth-node-api.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-tasks.workspace = true
reth-tracing.workspace = true
reth-revm.workspace = true

reth-optimism-chainspec.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-ethereum.workspace = true
reth-op.workspace = true

alloy-consensus.workspace = true
alloy-dyn-abi.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true

alloy-op-evm.workspace = true

op-alloy-consensus.workspace = true
op-revm.workspace = true

revm.workspace = true
revm-context.workspace = true

bitcoin.workspace = true
bitcoincore-rpc.workspace = true
derive_more.workspace = true
eyre.workspace = true
hex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
futures-util.workspace = true
thiserror.workspace = true
crossbeam-channel.workspace = true