[package]
name = "sova-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]

reth-chainspec.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-transaction-pool.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true

op-revm.workspace = true

futures-util.workspace = true
parking_lot.workspace = true